hn_tests/opt/failing/euler48.hn
hnMain = {
	natr ff l = {
		g x total = sum total (ff x)
		natrec g 0 l
	}
	poww a = {
		f zz prod = mod (mul prod a) 1000000000
		natrec f 1 (sub a 1)
	}
	print (mod (sub (natr poww 1000) 1) 1000000000)
}